# persistentdict

./: README.md  persistentdict.py  pyproject.toml  sqlite_source.yaml  tests.sh
persistentdict/: __init__.py  const.py  persistentdict.py  sqlite_source.yaml
tests/: test_persistentdict.py
