[tool.poetry]
name = "persistentdict"
version = "0.2.0"
description = "Dictionary-like object with SQLite connection"
authors = ["silkyanteater <cyclopesrufus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
